--- a/playbooks/network.yaml
+++ b/playbooks/network.yaml
@@ -80,8 +80,8 @@
           network: "{{ request_network.split('/')[0] }}"
           mask_bits: "{{ request_network.split('/')[1] }}"
           network_view: "{{ request_view }}"
-          plateforme: "{{ request_plateforme }}"
-          description: "{{ request_description }}"
+          plateforme: "{{ request_plateforme | default('') }}"
+          description: "{{ request_description | default('') }}"
       tags: [never, setup]
 
     - name: Set stats
@@ -93,7 +93,8 @@
           request_view: "{{ request_view }}"
           request_container: "{{ request_container }}"
           request_network: "{{ request_network }}"
-          request_description: "{{ request_description }}"
+          request_plateforme: "{{ request_plateforme | default('') }}"
+          request_description: "{{ request_description | default('') }}"
       tags: [never, query, setup]
 
 
