--- a/playbooks/network.yaml
+++ b/playbooks/network.yaml
@@ -59,7 +59,8 @@
 
     - name: Generate attributes
       set_fact:
-        request_plateforme: "{{ query('community.general.random_string', length=4, numbers=false, special=false, upper=false)[0] }}-{{ query('community.general.random_string', length=4, numbers=true, special=false, upper=false)[0] }}"
+        request_plateforme: "{{ request_plateforme | default(query('community.general.random_string', length=4, numbers=false, special=false, upper=false)[0] + '-' + query('community.general.random_string', length=4, numbers=true, special=false, upper=false)[0]) }}"
+        request_description: "{{ request_description | default('Generated via Ansible/AWX) }}"
       tags: [always]
 
     - name: Create network
@@ -68,7 +69,7 @@
         network_view: "{{ request_view }}"
         extattrs:
           Plateforme: "{{ request_plateforme }}"
-        comment: "{{ request_description | default('') }}"
+        comment: "{{ request_description }}"
         state: present
         provider: "{{ nios_provider }}"
       tags: [never, setup]
@@ -80,7 +81,7 @@
           mask_bits: "{{ request_network.split('/')[1] }}"
           network_view: "{{ request_view }}"
           plateforme: "{{ request_plateforme }}"
-          description: "{{ request_description | default('') }}"
+          description: "{{ request_description }}"
       tags: [never, setup]
 
     - name: Set stats
@@ -93,7 +94,7 @@
           request_container: "{{ request_container }}"
           request_network: "{{ request_network }}"
           request_plateforme: "{{ request_plateforme }}"
-          request_description: "{{ request_description | default('') }}"
+          request_description: "{{ request_description }}"
       tags: [never, query, setup]
 
 
@@ -111,4 +112,5 @@
           name: "{{ hostvars[item]['created_network']['plateforme'] }}"
           description: "{{ hostvars[item]['created_network']['description'] }}"
       with_items: "{{ groups['nios'] }}"
+      ignore_errors: yes
       tags: [never, setup]
