--- a/playbooks/bopi-pool.yml
+++ b/playbooks/bopi-pool.yml
@@ -2,8 +2,8 @@
 
 - hosts: nios
   connection: local
-  # collections:
-  #   - infoblox.nios_modules
+  collections:
+    - infoblox.nios_modules
   tasks:
 
     - name: Assert arguments
@@ -31,8 +31,8 @@
     
     - name: Lookup view, container and network
       set_fact:
-        infoblox_view: "{{ lookup('nios', 'view', provider=nios_provider, filter={'name': request_view}) }}"
-        infoblox_network: "{{ lookup('nios', 'network', provider=nios_provider, filter={'network': request_network}) }}"
+        infoblox_view: "{{ lookup('community.general.nios', 'view', provider=nios_provider, filter={'name': request_view}) }}"
+        infoblox_network: "{{ lookup('community.general.nios', 'network', provider=nios_provider, filter={'network': request_network}) }}"
       tags: [always]
 
     - name: Assert view
