--- a/playbooks/test-infoblox.yaml
+++ b/playbooks/test-infoblox.yaml
@@ -27,11 +27,11 @@
 
       - name: Return the list of networks
         debug:
-          msg: "{{ lookup('infoblox.nios_modules.nios', 'network', filter={'network_view': 'DT-internal', 'network': '172.29.42.0/24'}, provider=nios_provider) }}"
+          msg: "{{ lookup('infoblox.nios_modules.nios_lookup', 'network', filter={'network_view': 'DT-internal', 'network': '172.29.42.0/24'}, provider=nios_provider) }}"
 
       - name: Return the list of networks containers
         debug:
-          msg: "{{ lookup('infoblox.nios_modules.nios', 'networkcontainer', extattrs={'Plateforme': '49435400000001'}, provider=nios_provider) }}"
+          msg: "{{ lookup('infoblox.nios_modules.nios_lookup', 'networkcontainer', extattrs={'Plateforme': '49435400000001'}, provider=nios_provider) }}"
 
       tags: [never, lookup, lookups]
 
