--- a/playbooks/bopi-host.yml
+++ b/playbooks/bopi-host.yml
@@ -20,8 +20,8 @@
           data: "{{ request_host | default('') }}"
           test:
             - "item.data | length > 0"
-        - name: "IP address"
-          data: "{{ request_ip | default('') }}"
+        - name: "IPv4 address"
+          data: "{{ request_ipv4 | default('') }}"
           test:
             - "item.data | length > 0"
       tags: [always]
@@ -111,7 +111,9 @@
         name: "{{ request_host }}.{{ request_zone }}"
         view: "{{ request_view }}"
         ipv4addrs:
-          - ipv4addr: "{{ request_ip }}"
+          - ipv4addr: "{{ request_ipv4 }}"
+        ipv6addrs:
+          - ipv6addr: "{{ request_ipv6 }}"
         extattrs:
             Contacts: "{{ request_requestor }}"
             Description: "{{ request_description }}"
