--- a/playbooks/bopi-host.yml
+++ b/playbooks/bopi-host.yml
@@ -65,7 +65,12 @@
     - name: Lookup view, and host
       set_fact:
         infoblox_view: "{{ lookup('community.general.nios', 'view', filter={'name': request_view}, provider=nios_provider) }}"
-        #infoblox_host: "{{ lookup('community.general.nios', 'record:host', filter={'name': request_host}, provider=nios_provider) }}"
+        infoblox_host: "{{ lookup('community.general.nios', 'record:host', filter={'name': request_host}, provider=nios_provider) }}"
+      tags: [always]
+
+    - name: Debug view
+      debug:
+        var: infoblox_view
       tags: [always]
 
     - name: Assert view exists on infoblox
