--- a/playbooks/bopi-host.yml
+++ b/playbooks/bopi-host.yml
@@ -137,7 +137,7 @@
     - name: Create host IPv4 and IPv6
       community.general.nios_host_record:
         name: "{{ request_host }}.{{ request_zone }}"
-        view: "{{ request_view }}"
+        network_view: "{{ request_view }}"
         ipv4addrs:
           - ipv4addr: "{{ request_ipv4 }}"
         ipv6addrs:
@@ -155,7 +155,7 @@
     - name: Create host IPv4 only
       community.general.nios_host_record:
         name: "{{ request_host }}.{{ request_zone }}"
-        view: "{{ request_view }}"
+        network_view: "{{ request_view }}"
         ipv4addrs:
           - ipv4addr: "{{ request_ipv4 }}"
         extattrs:
