--- a/playbooks/bopi-host.yml
+++ b/playbooks/bopi-host.yml
@@ -69,6 +69,7 @@
 
     - name: Lookup view, and host
       set_fact:
+        infoblox_dns_view: "{{ lookup('community.general.nios', 'view', provider=nios_provider, filter={'name': request_view}) }}"
         infoblox_view: "{{ lookup('community.general.nios', 'networkview', filter={'name': request_view}, provider=nios_provider) }}"
         infoblox_host: "{{ lookup('community.general.nios', 'record:host', filter={'name': request_host}, provider=nios_provider) }}"
         infoblox_host_ipv4: "{{ lookup('community.general.nios', 'record:host', filter={'ipv4addr': request_ipv4}, provider=nios_provider) }}"
@@ -77,6 +78,11 @@
     - name: Debug view
       debug:
         var: infoblox_view
+      tags: [never, debug]
+
+    - name: Debug DNS view
+      debug:
+        var: infoblox_dns_view
       tags: [never, debug]
 
     - name: Debug host ipv4
